# TelegramBotAR

./: README.md  pyproject.toml
data/: dict.json
dev/: bot.py  config.py  dict.py  master_func.py  start.py  telegram_bot.py
