[project]
name = "telegram"
version = "0.1.0"
description = "''"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "''"}
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
telebot = "^0.0.5"

